--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,7 +1,7 @@
 .version.about_me /* version checker */
 {
-	color: #0000FC;
-	background-color: #265FD1;
+	color: #0000FB;
+	background-color: #6A18BF;
 }
 
 #muse_css_mq
@@ -716,7 +716,7 @@
 
 #u3395,#u3396,#u3397,#u3398,#u3399,#u3400
 {
-	color: #000000;
+	color: #E792C4;
 }
 
 #u3400-2
@@ -753,7 +753,7 @@
 {
 	font-size: 19px;
 	line-height: 23px;
-	color: #FFFFFF;
+	color: #E792C4;
 }
 
 #u1290-15
