--- a/css/iefonts_resume.css
+++ b/css/iefonts_resume.css
@@ -19,12 +19,12 @@
 }
 
 
-#u1253-111
+#u1253-125
 {
 	font-family: bitter-n4, serif;
 }
 
-#u1253-56 > #u1253-43:before,#u1253-56 > #u1253-45:before,#u1253-56 > #u1253-47:before,#u1253-56 > #u1253-49:before,#u1253-56 > #u1253-51:before,#u1253-56 > #u1253-53:before,#u1253-56 > #u1253-55:before,#u1253-67 > #u1253-64:before,#u1253-67 > #u1253-66:before,#u1253-87 > #u1253-72:before,#u1253-87 > #u1253-74:before,#u1253-87 > #u1253-76:before,#u1253-87 > #u1253-78:before,#u1253-87 > #u1253-80:before,#u1253-87 > #u1253-82:before,#u1253-87 > #u1253-84:before,#u1253-87 > #u1253-86:before,#u1253-95 > #u1253-92:before,#u1253-95 > #u1253-94:before,#u1253-104 > #u1253-101:before,#u1253-104 > #u1253-103:before
+#u1253-66 > #u1253-43:before,#u1253-66 > #u1253-45:before,#u1253-66 > #u1253-47:before,#u1253-66 > #u1253-49:before,#u1253-66 > #u1253-51:before,#u1253-66 > #u1253-53:before,#u1253-66 > #u1253-55:before,#u1253-66 > #u1253-57:before,#u1253-66 > #u1253-59:before,#u1253-66 > #u1253-61:before,#u1253-66 > #u1253-63:before,#u1253-66 > #u1253-65:before,#u1253-79 > #u1253-74:before,#u1253-79 > #u1253-76:before,#u1253-79 > #u1253-78:before,#u1253-99 > #u1253-84:before,#u1253-99 > #u1253-86:before,#u1253-99 > #u1253-88:before,#u1253-99 > #u1253-90:before,#u1253-99 > #u1253-92:before,#u1253-99 > #u1253-94:before,#u1253-99 > #u1253-96:before,#u1253-99 > #u1253-98:before,#u1253-107 > #u1253-104:before,#u1253-107 > #u1253-106:before,#u1253-118 > #u1253-113:before,#u1253-118 > #u1253-115:before,#u1253-118 > #u1253-117:before
 {
 	font-family: bitter-n4, Georgia;
 }
