--- a/css/website-milenakiseleva_github_io.css
+++ b/css/website-milenakiseleva_github_io.css
@@ -1,7 +1,7 @@
 .version.website_milenakiseleva_github_io /* version checker */
 {
-	color: #0000E3;
-	background-color: #3D4066;
+	color: #000002;
+	background-color: #673F1F;
 }
 
 #muse_css_mq
@@ -60,8 +60,8 @@
 	width: 600px;
 	min-height: 42px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -88,8 +88,8 @@
 	width: 600px;
 	min-height: 122px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
